ircv3_parse_derive/tests/ui/fail/06_duplicate_with_fail.stderr
error: duplicate `with` attribute
 --> tests/ui/fail/06_duplicate_with_fail.rs:6:11
  |
6 |     #[irc(with = "fn2")]
  |           ^^^^^^^^^^^^
